svl/Module_svl.mk
@@ -34,6 +34,7 @@ $(eval $(call gb_Module_add_check_targets,svl,\
 	CppunitTest_svl_qa_cppunit \
 	CppunitTest_svl_inetcontenttype \
 	CppunitTest_svl_items \
+	CppunitTest_svl_itempool \
 ))
 
 #TODO: CppunitTest_svl_urihelper depends on ucb, can only be added once svl is
